--- a/package.json
+++ b/package.json
@@ -41,8 +41,11 @@
     "web3": "^1.7.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.2",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.7",
+    "tailwindcss": "^3.0.23",
     "yarn": "^1.22.17"
   }
 }
